[package]
name = "deppo"
version = "0.1.0"
edition = "2021"

[dependencies]
gif = "0.13.1"
mouse_position = "0.1.4"
png = "0.17.13"
raylib = "5.0.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"

[dependencies.windows]
version = "0.57.0"
features = ["Win32", "Win32_UI", "Win32_UI_WindowsAndMessaging"]