[package]
name = "deppo"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
strip = "debuginfo"

[dependencies]
chrono = "0.4.38"
dirs = "5.0.1"
gif = "0.13.1"
mouse_position = "0.1.4"
open = "5.1.4"
png = "0.17.13"
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
serde-inline-default = "0.2.0"
serde_json = "1.0.117"
zip = "2.1.3"

[dependencies.windows]
version = "0.57.0"
features = ["Win32", "Win32_UI", "Win32_UI_WindowsAndMessaging"]

[target.'cfg(target_os = "windows")'.dependencies]
raylib = "5.0.1"

[target.'cfg(target_os = "macos")'.dependencies]
raylib = "5.0.1"
cocoa = "0.25.0"
objc = "0.2"
objc-foundation = "0.1.1"

[target.'cfg(target_os = "linux")'.dependencies]
raylib = { version = "5.0.1", features = ["wayland"] }
